[package]
name = "ipld-block-builder"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
libipld = { path = "../rust-ipld" }

[patch.crates-io]
cid = { git = "https://github.com/multiformats/rust-cid" }
multihash = { path = "../rust-multihash" }
