[package]
name = "ipld-block-builder"
version = "0.1.2"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "library for dealing with ipld"
repository = "https://github.com/dvc94ch/ipld-block-builder"

[features]
crypto = ["rand", "secrecy", "strobe-rs", "thiserror", "unsigned-varint", "zeroize"]

[dependencies]
async-std = "1.5.0"
libipld = "0.2.1"
rand = { version = "0.7.3", optional = true }
secrecy = { version = "0.6.0", optional = true }
smallvec = "1.4.0"
strobe-rs = { version = "0.5.3", optional = true }
thiserror = { version = "1.0.17", optional = true }
unsigned-varint = { version = "0.3.3", optional = true }
zeroize = { version = "1.1.0", optional = true }

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
