[package]
name = "ipld-block-builder"
version = "0.4.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "library for dealing with ipld"
repository = "https://github.com/ipfs-rust/ipld-block-builder"

[features]
crypto = ["rand", "secrecy", "strobe-rs", "thiserror", "unsigned-varint", "zeroize"]

[dependencies]
async-std = "1.5.0"
async-trait = "0.1.36"
cached = "0.12.0"
libipld = "0.3.0"
rand = { version = "0.7.3", optional = true }
secrecy = { version = "0.6.0", optional = true }
strobe-rs = { version = "0.5.3", optional = true }
thiserror = { version = "1.0.19", optional = true }
unsigned-varint = { version = "0.4.0", optional = true }
zeroize = { version = "1.1.0", optional = true }

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
